Bug 321815 - Access Control is not editable anywhere but in kmail
Summary: Access Control is not editable anywhere but in kmail
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: libakonadi (other bugs)
Version First Reported In: 4.10
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-01 10:13 UTC by Christian Mollekopf
Modified: 2013-09-25 12:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Mollekopf 2013-07-01 10:13:02 UTC
The "Folder Properties" -> "Access Control" tab does not allow to change sharing options in korganizer or kaddressbook, although sufficient rights ("a")  would be available. The same works from KMail though. The add/edit/remove buttons simply remain grayed out.
Comment 1 Laurent Montel 2013-07-01 10:49:17 UTC
How we add a korganizer kolab folder ?
(I need it to test it)
Comment 2 Christian Mollekopf 2013-07-01 10:54:25 UTC
(In reply to comment #1)
> How we add a korganizer kolab folder ?
> (I need it to test it)

Just add a calendar folder in korganizer to the kolab resource.
Comment 3 Laurent Montel 2013-07-02 06:22:28 UTC
Git commit 6f471943fe0d072f7d1bbce0b37cbfae80522a53 by Montel Laurent.
Committed on 02/07/2013 at 06:22.
Pushed by mlaurent into branch 'master'.

Fix Bug 321815 - Access Control is not editable anywhere but in kmail

FIXED-IN: 4.11

M  +2    -0    resources/kolabproxy/CMakeLists.txt
M  +14   -1    resources/kolabproxy/kolabproxyresource.cpp
M  +2    -0    resources/kolabproxy/kolabproxyresource.h
A  +9    -0    resources/kolabproxy/org.freedesktop.Akonadi.kolabproxy.xml

http://commits.kde.org/kdepim-runtime/6f471943fe0d072f7d1bbce0b37cbfae80522a53
Comment 4 Laurent Montel 2013-07-02 06:23:15 UTC
Git commit a0fa4310cd74d488f1eab885f029cdc339537be2 by Montel Laurent.
Committed on 02/07/2013 at 06:22.
Pushed by mlaurent into branch 'master'.

Fix Bug 321815 - Access Control is not editable anywhere but in kmail

FIXED-IN: 4.11

M  +13   -2    pimcommon/acl/aclmanager.cpp

http://commits.kde.org/kdepim/a0fa4310cd74d488f1eab885f029cdc339537be2
Comment 5 Christian Mollekopf 2013-07-04 16:42:54 UTC
Git commit cfa3863fca96c794789ed49bae7a1688bbeb2839 by Christian Mollekopf, on behalf of Montel Laurent.
Committed on 02/07/2013 at 06:22.
Pushed by cmollekopf into branch 'KDE/4.10'.

Fix Bug 321815 - Access Control is not editable anywhere but in kmail

FIXED-IN: 4.11
Signed-off-by: Christian Mollekopf <chrigi_1@fastmail.fm>

M  +2    -0    resources/kolabproxy/CMakeLists.txt
M  +14   -1    resources/kolabproxy/kolabproxyresource.cpp
M  +2    -0    resources/kolabproxy/kolabproxyresource.h
A  +9    -0    resources/kolabproxy/org.freedesktop.Akonadi.kolabproxy.xml

http://commits.kde.org/kdepim-runtime/cfa3863fca96c794789ed49bae7a1688bbeb2839
Comment 6 Christian Mollekopf 2013-07-04 16:44:26 UTC
Git commit bf4e94c1c9619c8c3435544f2259b5e165fa9984 by Christian Mollekopf.
Committed on 03/07/2013 at 13:54.
Pushed by cmollekopf into branch 'KDE/4.10'.

Fix Bug 321815 - Access Control is not editable anywhere but in kmail

FIXED-IN: 4.10
Signed-off-by: Christian Mollekopf <chrigi_1@fastmail.fm>

Conflicts:
	pimcommon/acl/aclmanager.cpp

Manually backported due to conflicts.

M  +13   -1    pimcommon/aclmanager.cpp

http://commits.kde.org/kdepim/bf4e94c1c9619c8c3435544f2259b5e165fa9984
Comment 7 Christian Mollekopf 2013-09-25 12:06:25 UTC
Git commit bcd8f159cdbb45c5361dececf104d75d2a5f4f34 by Christian Mollekopf, on behalf of Montel Laurent.
Committed on 02/07/2013 at 06:22.
Pushed by cmollekopf into branch 'kolab/integration/4.10.2'.

Fix Bug 321815 - Access Control is not editable anywhere but in kmail

FIXED-IN: 4.11
Signed-off-by: Christian Mollekopf <chrigi_1@fastmail.fm>

M  +2    -0    resources/kolabproxy/CMakeLists.txt
M  +14   -1    resources/kolabproxy/kolabproxyresource.cpp
M  +2    -0    resources/kolabproxy/kolabproxyresource.h
A  +9    -0    resources/kolabproxy/org.freedesktop.Akonadi.kolabproxy.xml

http://commits.kde.org/kdepim-runtime/bcd8f159cdbb45c5361dececf104d75d2a5f4f34