Fix Bug 321815 - Access Control is not editable anywhere but in kmail

FIXED-IN: 4.11
BUG: 321815